tests/a/tests/integrity/fail/pattern/pattern.2.stderr
error: expected {root}{root}, found {root}{*}
  --> tests/integrity/fail/pattern/pattern.2.rs:15:13
   |
15 |     let y = a;
   |             ^
